--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -13,8 +13,154 @@
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
+	<style name="Table_TH" mode="Opaque" backcolor="#004893">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_CH" mode="Opaque" backcolor="#8DB4E2">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<subDataset name="EmployeeByType" uuid="727dbfe7-4e1f-4d9e-aa0f-0a7cd6e9b2c2">
+		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
+		<parameter name="customer" class="java.lang.String">
+			<defaultValueExpression><![CDATA["ARAB"]]></defaultValueExpression>
+		</parameter>
+		<parameter name="periodSelected" class="java.lang.Integer">
+			<defaultValueExpression><![CDATA[24228]]></defaultValueExpression>
+		</parameter>
+		<queryString language="SQL">
+			<![CDATA[SELECT s1.customer, s1.userrole, s1.period_extracted, s1.nb_users
+  FROM  (SELECT customer, 'Sentinel-BU' as userrole, (date_part('year', export_date)*12+date_part('month', export_date)) AS period_extracted, COUNT(avq_user_id) AS nb_users
+  			FROM msr.avq_users 
+     	   group by customer, period_extracted
+  			) s1
+  WHERE s1.customer =   $P{customer} 
+  and s1.period_extracted =  $P{periodSelected}]]>
+		</queryString>
+		<field name="customer" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="customer"/>
+			<property name="com.jaspersoft.studio.field.tree.path" value="avq_users"/>
+		</field>
+		<field name="userrole" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="userrole"/>
+		</field>
+		<field name="period_extracted" class="java.lang.Double">
+			<property name="com.jaspersoft.studio.field.label" value="period_extracted"/>
+		</field>
+		<field name="nb_users" class="java.lang.Integer">
+			<property name="com.jaspersoft.studio.field.label" value="nb_users"/>
+		</field>
+	</subDataset>
+	<subDataset name="UsersByType" uuid="655f29d9-2776-4be0-bbd2-831d37cfdbab">
+		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
+		<parameter name="selectedDate" class="java.lang.String">
+			<defaultValueExpression><![CDATA[20190601]]></defaultValueExpression>
+		</parameter>
+		<parameter name="customer" class="java.lang.String">
+			<defaultValueExpression><![CDATA["ARAB"]]></defaultValueExpression>
+		</parameter>
+		<queryString language="SQL">
+			<![CDATA[SELECT customer,
+	   'Avaloq - Sentinel BU active accounts' as user_system,
+       export_date, 
+	   COUNT(avq_user_id) AS nb_employees,
+   	   (SELECT count(US2.user_id) 
+              FROM msr.avq_users US2
+	          WHERE US2.export_date = US1.export_date
+	          AND US2.customer = US1.customer
+		      AND US2.win_user NOT IN (SELECT US3.win_user
+	                                         FROM msr.avq_users US3 
+				        					  WHERE	US3.export_date = US1.export_date - interval '1 month'
+	                                          AND US3.customer = US1.customer)) AS USERS_ADDED,
+       (SELECT COUNT(US2.avq_user_id) 
+        	           FROM msr.avq_users US2
+	               WHERE US2.export_date = US1.export_date - interval '1 month'
+	                    AND US2.customer = US1.customer
+	                	AND US2.win_user NOT IN (SELECT US3.win_user 
+	                		                      FROM msr.avq_users US3 
+												  WHERE	US3.export_date = US1.export_date
+	                		                      AND US3.customer = US1.customer)) AS USERS_REMOVED
+FROM msr.avq_users  US1
+WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
+AND US1.customer =  $P{customer} 
+GROUP BY customer, export_date
+union all
+SELECT customer,
+	   '   Accounts with permanent access to sensitive data' as user_system,
+       export_date, 
+	   COUNT(avq_user_id) AS nb_employees,
+   	   0 AS USERS_ADDED,
+       0 AS USERS_REMOVED
+FROM msr.avq_users  US1
+WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
+AND US1.customer =  $P{customer} 
+AND US1.is_sensitive = 'Yes'
+GROUP BY customer, export_date
+union all
+SELECT customer,
+	   '      Accounts with permanent sensitive data export functionality' as user_system,
+       export_date, 
+	   COUNT(avq_user_id) AS nb_employees,
+   	   0 AS USERS_ADDED,
+       0 AS USERS_REMOVED
+FROM msr.avq_users  US1
+WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
+AND US1.customer =  $P{customer} 
+AND US1.is_export = 'Yes'
+GROUP BY customer, export_date
+
+
+
+]]>
+		</queryString>
+		<field name="customer" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="customer"/>
+			<property name="com.jaspersoft.studio.field.tree.path" value="avq_users"/>
+		</field>
+		<field name="user_system" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="user_system"/>
+		</field>
+		<field name="export_date" class="java.sql.Date">
+			<property name="com.jaspersoft.studio.field.label" value="export_date"/>
+			<property name="com.jaspersoft.studio.field.tree.path" value="avq_users"/>
+		</field>
+		<field name="nb_employees" class="java.lang.Long">
+			<property name="com.jaspersoft.studio.field.label" value="nb_employees"/>
+		</field>
+		<field name="users_added" class="java.lang.Long">
+			<property name="com.jaspersoft.studio.field.label" value="users_added"/>
+		</field>
+		<field name="users_removed" class="java.lang.Long">
+			<property name="com.jaspersoft.studio.field.label" value="users_removed"/>
+		</field>
+	</subDataset>
 	<parameter name="coverTitle" class="java.lang.String">
 		<defaultValueExpression><![CDATA["NEWSLETTER TITLE"]]></defaultValueExpression>
+	</parameter>
+	<parameter name="customer" class="java.lang.String">
+		<defaultValueExpression><![CDATA["ARAB"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="subsection" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
@@ -24,6 +170,9 @@
 	</parameter>
 	<parameter name="chapter" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
+	</parameter>
+	<parameter name="selectedDate" class="java.lang.String">
+		<defaultValueExpression><![CDATA["20190601"]]></defaultValueExpression>
 	</parameter>
 	<queryString>
 		<![CDATA[select 1]]>
@@ -66,9 +215,16 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="249" splitType="Stretch">
+		<band height="352" splitType="Stretch">
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
+			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
+				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="455" height="20" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
+				<textFieldExpression><![CDATA[$V{x.Management_Summary}]]></textFieldExpression>
+				<anchorNameExpression><![CDATA[$V{x.Management_Summary}]]></anchorNameExpression>
+				<hyperlinkAnchorExpression><![CDATA[$V{x.Management_Summary}]]></hyperlinkAnchorExpression>
+			</textField>
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="50" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="40" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
 					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
 				</reportElement>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
@@ -77,18 +233,113 @@
 				</textElement>
 				<text><![CDATA[The management summary is an overview on all the figures and information provided. With this summary we want to give a quick view on all topics detailed in the report.]]></text>
 			</staticText>
-			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
-				<reportElement style="Header-2" x="0" y="2" width="455" height="18" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
-				<textFieldExpression><![CDATA[$V{x.Management_Summary}]]></textFieldExpression>
-				<anchorNameExpression><![CDATA[$V{x.Management_Summary}]]></anchorNameExpression>
-				<hyperlinkAnchorExpression><![CDATA[$V{x.Management_Summary}]]></hyperlinkAnchorExpression>
-			</textField>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="2">
-				<reportElement style="Header-3" positionType="Float" x="0" y="70" width="455" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
+				<reportElement style="Header-3" positionType="Float" x="0" y="60" width="455" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
 				<textFieldExpression><![CDATA[$V{x.y+1_access_control}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.y+1_access_control}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.y+1_access_control}]]></hyperlinkAnchorExpression>
 			</textField>
+			<staticText>
+				<reportElement style="NormalText" x="0" y="80" width="455" height="30" uuid="fe280e28-493f-4004-a7e6-240ad8c57cdd"/>
+				<text><![CDATA[Regarding access control, the information reported in this document can be summarized in the following figures:]]></text>
+			</staticText>
+			<componentElement>
+				<reportElement x="1" y="110" width="453" height="80" uuid="1b1cc3df-f706-4345-a07e-e8512e16fb5e">
+					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
+					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
+					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
+					<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
+				</reportElement>
+				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
+					<datasetRun subDataset="UsersByType" uuid="509fdb48-f1ec-40fb-9773-7e0ae148bca8">
+						<datasetParameter name="customer">
+							<datasetParameterExpression><![CDATA[$P{customer}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="selectedDate">
+							<datasetParameterExpression><![CDATA[$P{selectedDate}]]></datasetParameterExpression>
+						</datasetParameter>
+						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+					</datasetRun>
+					<jr:column width="230" uuid="e9b40a36-b4b1-4181-8073-54434e8452d8">
+						<jr:tableHeader style="Table_TH" height="30">
+							<staticText>
+								<reportElement style="Table-Table-Name" x="0" y="0" width="230" height="30" uuid="685807e4-fb9b-42b0-9cc1-bf6777a6e75a"/>
+								<text><![CDATA[Users by type]]></text>
+							</staticText>
+						</jr:tableHeader>
+						<jr:columnHeader style="Table_CH" height="20">
+							<staticText>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="230" height="20" uuid="da8feeda-5814-4552-a15d-1912add5c26d"/>
+								<text><![CDATA[Account type]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table_TD" height="20">
+							<property name="com.jaspersoft.studio.unit.height" value="px"/>
+							<textField>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="230" height="20" forecolor="#000000" uuid="027ce7a9-fe43-4dc3-a62f-1c6b60f1330a"/>
+								<textFieldExpression><![CDATA[$F{user_system}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="80" uuid="d4b91359-0e39-456a-8afb-94a9fa5568cd">
+						<jr:tableHeader style="Table_TH" height="30">
+							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+						</jr:tableHeader>
+						<jr:columnHeader style="Table_CH" height="20">
+							<staticText>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="80" height="20" uuid="e7b7e6b6-d0cc-45c7-9b3c-aca2623499ed"/>
+								<textElement textAlignment="Center"/>
+								<text><![CDATA[Total]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table_TD" height="20">
+							<textField>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="80" height="20" forecolor="#000000" uuid="74c9cadd-a940-457d-ad16-ffe8bb2194c7"/>
+								<textElement textAlignment="Center"/>
+								<textFieldExpression><![CDATA[$F{nb_employees}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="80" uuid="32a1b485-cce6-49c2-b92a-42f34bcdf0cd">
+						<jr:tableHeader style="Table_TH" height="30">
+							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+						</jr:tableHeader>
+						<jr:columnHeader style="Table_CH" height="20">
+							<staticText>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="80" height="20" uuid="2d6689a8-a797-49d4-87e4-2c5a82f52d69"/>
+								<textElement textAlignment="Center"/>
+								<text><![CDATA[Added]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table_TD" height="20">
+							<textField>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="80" height="20" forecolor="#000000" uuid="a98577ae-76ca-4a79-a637-4e6354895d80"/>
+								<textElement textAlignment="Center"/>
+								<textFieldExpression><![CDATA[$F{users_added}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="80" uuid="9d9d3674-bc4a-457e-ab4d-30bb45a14c9d">
+						<jr:tableHeader style="Table_TH" height="30">
+							<property name="com.jaspersoft.studio.unit.width" value="px"/>
+						</jr:tableHeader>
+						<jr:columnHeader style="Table_CH" height="20">
+							<staticText>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="80" height="20" uuid="a51c190d-0a39-4f77-901b-7028fda704d3"/>
+								<textElement textAlignment="Center"/>
+								<text><![CDATA[Removed]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table_TD" height="20">
+							<textField>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="80" height="20" forecolor="#000000" uuid="ac903b50-b1b7-48fd-be17-8608799eb460"/>
+								<textElement textAlignment="Center"/>
+								<textFieldExpression><![CDATA[$F{users_removed}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+				</jr:table>
+			</componentElement>
 		</band>
 	</detail>
 	<pageFooter>
