management summary with all lines (to be verified

--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -130,6 +130,68 @@ WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
 AND US1.customer =  $P{customer} 
 AND US1.is_export = 'Yes'
 GROUP BY customer, export_date
+union all
+SELECT customer,
+	   'Unix accounts' as user_system,
+       export_date, 
+	   COUNT(user_id) AS nb_employees,
+   	   (SELECT count(US2.user_id) 
+              FROM msr.unix_dba_users US2
+	          WHERE US2.export_date = US1.export_date
+	          AND US2.customer = US1.customer
+		      AND US2.group_id != 'dba'
+		      AND US2.user_id NOT IN (SELECT US3.user_id
+	                                         FROM msr.unix_dba_users US3 
+				        					  WHERE	US3.export_date = US1.export_date - interval '1 month'
+	                                          AND US3.customer = US1.customer
+											  AND US3.group_id != 'dba')) AS USERS_ADDED,
+       (SELECT COUNT(US2.user_id) 
+        	           FROM msr.unix_dba_users US2
+	               WHERE US2.export_date = US1.export_date - interval '1 month'
+	                    AND US2.customer = US1.customer
+						AND US2.group_id != 'dba'
+	                	AND US2.user_id NOT IN (SELECT US3.user_id 
+	                		                      FROM msr.unix_dba_users US3 
+												  WHERE	US3.export_date = US1.export_date
+	                    						  AND US3.customer = US1.customer
+											      AND US3.group_id != 'dba')) AS USERS_REMOVED
+
+FROM msr.unix_dba_users  US1
+WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
+AND US1.customer =  $P{customer} 
+and US1.group_id != 'dba'
+GROUP BY customer, export_date
+union all
+SELECT customer,
+	   'Database accounts' as user_system,
+       export_date, 
+	   COUNT(user_id) AS nb_employees,
+   	   (SELECT count(US2.user_id) 
+              FROM msr.unix_dba_users US2
+	          WHERE US2.export_date = US1.export_date
+	          AND US2.customer = US1.customer
+		      AND US2.group_id = 'dba'
+		      AND US2.user_id NOT IN (SELECT US3.user_id
+	                                         FROM msr.unix_dba_users US3 
+				        					  WHERE	US3.export_date = US1.export_date - interval '1 month'
+	                                          AND US3.customer = US1.customer
+											  AND US3.group_id = 'dba')) AS USERS_ADDED,
+       (SELECT COUNT(US2.user_id) 
+        	           FROM msr.unix_dba_users US2
+	               WHERE US2.export_date = US1.export_date - interval '1 month'
+	                    AND US2.customer = US1.customer
+						AND US2.group_id = 'dba'
+	                	AND US2.user_id NOT IN (SELECT US3.user_id 
+	                		                      FROM msr.unix_dba_users US3 
+												  WHERE	US3.export_date = US1.export_date
+	                    						  AND US3.customer = US1.customer
+											      AND US3.group_id = 'dba')) AS USERS_REMOVED
+
+FROM msr.unix_dba_users  US1
+WHERE US1.export_date = to_date( $P{selectedDate} , 'YYYYMMDD')
+AND US1.customer =  $P{customer} 
+and US1.group_id = 'dba'
+GROUP BY customer, export_date
 
 
 
