Windows users part book added

--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Management Summary" pageWidth="595" pageHeight="842" columnWidth="455" leftMargin="70" rightMargin="70" topMargin="70" bottomMargin="70" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="b68e4251-4e98-4ffa-99cc-646e75dcfaf5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Management Summary" pageWidth="595" pageHeight="842" columnWidth="483" leftMargin="56" rightMargin="56" topMargin="56" bottomMargin="56" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="b68e4251-4e98-4ffa-99cc-646e75dcfaf5">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.unit." value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
-	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<style name="Table_TH" mode="Opaque" backcolor="#004893">
@@ -267,10 +258,10 @@ GROUP BY customer, export_date
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="32" width="455" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
+				<reportElement x="0" y="32" width="483" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="253" y="3" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
+				<reportElement style="headerPageNumbers" x="283" y="1" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
@@ -280,13 +271,13 @@ GROUP BY customer, export_date
 		<band height="352" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
-				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="455" height="20" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
+				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="483" height="20" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
 				<textFieldExpression><![CDATA[$V{x.Management_Summary}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.Management_Summary}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.Management_Summary}]]></hyperlinkAnchorExpression>
 			</textField>
 			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="455" height="40" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
+				<reportElement style="NormalText" positionType="Float" x="0" y="20" width="483" height="40" uuid="37b23a45-e9f2-4c67-8bca-bcdc2dca711b">
 					<property name="com.jaspersoft.studio.unit.tabStopWidth" value="px"/>
 				</reportElement>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0"/>
@@ -296,17 +287,17 @@ GROUP BY customer, export_date
 				<text><![CDATA[The management summary is an overview on all the figures and information provided. With this summary we want to give a quick view on all topics detailed in the report.]]></text>
 			</staticText>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="2">
-				<reportElement style="Header-3" positionType="Float" x="0" y="60" width="455" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
+				<reportElement style="Header-3" positionType="Float" x="0" y="60" width="483" height="20" uuid="dbe59c5f-ff6d-40dd-8a32-88a55c7f969e"/>
 				<textFieldExpression><![CDATA[$V{x.y+1_access_control}]]></textFieldExpression>
 				<anchorNameExpression><![CDATA[$V{x.y+1_access_control}]]></anchorNameExpression>
 				<hyperlinkAnchorExpression><![CDATA[$V{x.y+1_access_control}]]></hyperlinkAnchorExpression>
 			</textField>
 			<staticText>
-				<reportElement style="NormalText" x="0" y="80" width="455" height="30" uuid="fe280e28-493f-4004-a7e6-240ad8c57cdd"/>
+				<reportElement style="NormalText" x="0" y="80" width="483" height="30" uuid="fe280e28-493f-4004-a7e6-240ad8c57cdd"/>
 				<text><![CDATA[Regarding access control, the information reported in this document can be summarized in the following figures:]]></text>
 			</staticText>
 			<componentElement>
-				<reportElement x="1" y="110" width="453" height="80" uuid="1b1cc3df-f706-4345-a07e-e8512e16fb5e">
+				<reportElement x="1" y="110" width="482" height="80" uuid="1b1cc3df-f706-4345-a07e-e8512e16fb5e">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -322,23 +313,24 @@ GROUP BY customer, export_date
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="230" uuid="e9b40a36-b4b1-4181-8073-54434e8452d8">
+					<jr:column width="240" uuid="e9b40a36-b4b1-4181-8073-54434e8452d8">
 						<jr:tableHeader style="Table_TH" height="30">
+							<property name="com.jaspersoft.studio.unit.width" value="px"/>
 							<staticText>
-								<reportElement style="Table-Table-Name" x="0" y="0" width="230" height="30" uuid="685807e4-fb9b-42b0-9cc1-bf6777a6e75a"/>
+								<reportElement style="Table-Table-Name" x="0" y="0" width="240" height="30" uuid="685807e4-fb9b-42b0-9cc1-bf6777a6e75a"/>
 								<text><![CDATA[Users by type]]></text>
 							</staticText>
 						</jr:tableHeader>
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="230" height="20" uuid="da8feeda-5814-4552-a15d-1912add5c26d"/>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="240" height="20" uuid="da8feeda-5814-4552-a15d-1912add5c26d"/>
 								<text><![CDATA[Account type]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<property name="com.jaspersoft.studio.unit.height" value="px"/>
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="230" height="20" forecolor="#000000" uuid="027ce7a9-fe43-4dc3-a62f-1c6b60f1330a"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="240" height="20" forecolor="#000000" uuid="027ce7a9-fe43-4dc3-a62f-1c6b60f1330a"/>
 								<textFieldExpression><![CDATA[$F{user_system}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -363,9 +355,7 @@ GROUP BY customer, export_date
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="80" uuid="32a1b485-cce6-49c2-b92a-42f34bcdf0cd">
-						<jr:tableHeader style="Table_TH" height="30">
-							<property name="com.jaspersoft.studio.unit.width" value="px"/>
-						</jr:tableHeader>
+						<jr:tableHeader style="Table_TH" height="30"/>
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
 								<reportElement style="Table-Column-Header" x="0" y="0" width="80" height="20" uuid="2d6689a8-a797-49d4-87e4-2c5a82f52d69"/>
@@ -382,9 +372,7 @@ GROUP BY customer, export_date
 						</jr:detailCell>
 					</jr:column>
 					<jr:column width="80" uuid="9d9d3674-bc4a-457e-ab4d-30bb45a14c9d">
-						<jr:tableHeader style="Table_TH" height="30">
-							<property name="com.jaspersoft.studio.unit.width" value="px"/>
-						</jr:tableHeader>
+						<jr:tableHeader style="Table_TH" height="30"/>
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
 								<reportElement style="Table-Column-Header" x="0" y="0" width="80" height="20" uuid="a51c190d-0a39-4f77-901b-7028fda704d3"/>
@@ -411,7 +399,7 @@ GROUP BY customer, export_date
 				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="385" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
+				<reportElement x="413" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
