--- a/MSR/Monthly-Security-Report-Book_toc.jrxml
+++ b/MSR/Monthly-Security-Report-Book_toc.jrxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TocReport" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="455" leftMargin="70" rightMargin="70" topMargin="70" bottomMargin="70" uuid="6e74177b-d551-4a75-ae51-6cdde3f284ce">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TocReport" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="483" leftMargin="56" rightMargin="56" topMargin="56" bottomMargin="56" uuid="6e74177b-d551-4a75-ae51-6cdde3f284ce">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="TocData"/>
-	<property name="com.jaspersoft.studio.unit.topMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.bottomMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.leftMargin" value="cm"/>
-	<property name="com.jaspersoft.studio.unit.rightMargin" value="cm"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<style name="Title" hTextAlign="Right" hImageAlign="Right" fontSize="32">
 		<box>
@@ -57,12 +58,12 @@
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="322" y="1" width="133" height="32" uuid="82e53a01-a737-4ace-944e-052f26a8bf3a"/>
+				<reportElement style="headerPageNumbers" x="350" y="0" width="133" height="32" uuid="82e53a01-a737-4ace-944e-052f26a8bf3a"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="32" width="455" height="1" uuid="a82043f0-5900-4a92-aa7f-129dd3b73da1"/>
+				<reportElement x="0" y="32" width="483" height="1" uuid="a82043f0-5900-4a92-aa7f-129dd3b73da1"/>
 			</line>
 		</band>
 	</title>
@@ -81,7 +82,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{level} == 1]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" hyperlinkType="LocalAnchor">
-				<reportElement style="TOC-Title1" x="0" y="0" width="400" height="15" uuid="250944b7-e315-4fe8-bdf2-2b04ec01afb1">
+				<reportElement style="TOC-Title1" x="0" y="0" width="435" height="15" uuid="250944b7-e315-4fe8-bdf2-2b04ec01afb1">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="local_mesure_unity" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
@@ -95,7 +96,7 @@
 				<hyperlinkAnchorExpression><![CDATA[$F{label}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField evaluationTime="Auto" hyperlinkType="LocalAnchor">
-				<reportElement style="Header-2" x="410" y="0" width="45" height="15" uuid="8aba984a-d193-44da-bb5d-9ecd678b100f">
+				<reportElement style="Header-2" x="435" y="0" width="45" height="15" uuid="8aba984a-d193-44da-bb5d-9ecd678b100f">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
@@ -112,7 +113,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{level} == 2]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" hyperlinkType="LocalAnchor">
-				<reportElement style="TOC-Title1" x="10" y="0" width="390" height="15" uuid="27da0eec-c52f-479b-8ee3-13a01be8e71d">
+				<reportElement style="TOC-Title1" x="10" y="0" width="425" height="15" uuid="27da0eec-c52f-479b-8ee3-13a01be8e71d">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="local_mesure_unity" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
@@ -127,7 +128,7 @@
 				<hyperlinkAnchorExpression><![CDATA[$F{label}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField evaluationTime="Auto" hyperlinkType="LocalAnchor">
-				<reportElement style="Header-2" x="410" y="0" width="45" height="15" uuid="629775bb-a1f6-46b3-b6f3-1f64e490acc9">
+				<reportElement style="Header-2" x="435" y="0" width="45" height="15" uuid="629775bb-a1f6-46b3-b6f3-1f64e490acc9">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -142,7 +143,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{level} == 3]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" hyperlinkType="LocalAnchor">
-				<reportElement style="TOC-Title1" x="20" y="0" width="380" height="15" uuid="305113ec-8522-4e8b-875b-cf0c0a2b27e0">
+				<reportElement style="TOC-Title1" x="20" y="0" width="415" height="15" uuid="305113ec-8522-4e8b-875b-cf0c0a2b27e0">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="local_mesure_unity" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
@@ -157,7 +158,7 @@
 				<hyperlinkAnchorExpression><![CDATA[$F{label}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField evaluationTime="Auto" hyperlinkType="LocalAnchor">
-				<reportElement style="Header-2" x="410" y="0" width="45" height="15" uuid="dd6b05a1-f8d8-4977-98a2-14fb9d11c12b">
+				<reportElement style="Header-2" x="435" y="0" width="45" height="15" uuid="dd6b05a1-f8d8-4977-98a2-14fb9d11c12b">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -172,7 +173,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{level} == 4]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" hyperlinkType="LocalAnchor">
-				<reportElement style="TOC-Title1" x="30" y="0" width="370" height="15" uuid="38e61044-7371-4c6d-8997-3e9c4f00dc7d">
+				<reportElement style="TOC-Title1" x="30" y="0" width="405" height="15" uuid="38e61044-7371-4c6d-8997-3e9c4f00dc7d">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="local_mesure_unity" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
@@ -187,7 +188,7 @@
 				<hyperlinkAnchorExpression><![CDATA[$F{label}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField evaluationTime="Auto" hyperlinkType="LocalAnchor">
-				<reportElement style="Header-2" x="410" y="0" width="45" height="15" uuid="2518ed55-b4e0-4bd3-b216-3614ba1cca89">
+				<reportElement style="Header-2" x="435" y="0" width="45" height="15" uuid="2518ed55-b4e0-4bd3-b216-3614ba1cca89">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -202,7 +203,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<printWhenExpression><![CDATA[$F{level} == 5]]></printWhenExpression>
 			<textField evaluationTime="Auto" hyperlinkType="LocalAnchor">
-				<reportElement style="Header-2" x="410" y="0" width="45" height="15" uuid="77f2959c-b8d6-4663-bef2-fabba91bc706">
+				<reportElement style="Header-2" x="435" y="0" width="45" height="15" uuid="77f2959c-b8d6-4663-bef2-fabba91bc706">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
@@ -213,7 +214,7 @@
 				<hyperlinkAnchorExpression><![CDATA[$F{label}]]></hyperlinkAnchorExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" hyperlinkType="LocalAnchor">
-				<reportElement style="TOC-Title1" x="40" y="0" width="360" height="15" uuid="a3c90a0c-a018-4327-9142-de2eb272cbbd">
+				<reportElement style="TOC-Title1" x="40" y="0" width="395" height="15" uuid="a3c90a0c-a018-4327-9142-de2eb272cbbd">
 					<property name="local_mesure_unitheight" value="pixel"/>
 					<property name="local_mesure_unity" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
