--- a/MSR/Monthly-Security-Report-Book.jrxml
+++ b/MSR/Monthly-Security-Report-Book.jrxml
@@ -52,12 +52,8 @@ where company_tag =  $P{customer}]]>
 		<property name="com.jaspersoft.studio.field.tree.path" value="banks"/>
 	</field>
 	<variable name="chapter" class="java.lang.Integer"/>
-	<variable name="section" class="java.lang.Integer">
-		<initialValueExpression><![CDATA[0]]></initialValueExpression>
-	</variable>
-	<variable name="subsection" class="java.lang.Integer">
-		<initialValueExpression><![CDATA[0]]></initialValueExpression>
-	</variable>
+	<variable name="section" class="java.lang.Integer"/>
+	<variable name="subsection" class="java.lang.Integer"/>
 	<variable name="selectedDate" class="java.lang.String">
 		<initialValueExpression><![CDATA[$P{Year}+String.format("%02d", $P{Month})+"01"]]></initialValueExpression>
 	</variable>
@@ -106,7 +102,7 @@ where company_tag =  $P{customer}]]>
 					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="chapter">
-					<subreportParameterExpression><![CDATA[$V{chapter}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[1]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="coverTitle">
 					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
@@ -152,54 +148,57 @@ where company_tag =  $P{customer}]]>
 				<subreportExpression><![CDATA["MSR-2-Management-Summary.jasper"]]></subreportExpression>
 			</p:subreportPart>
 		</part>
-		<part uuid="6f361b7b-dbd9-4c2b-a16a-ffdcb7ce7f37">
+		<part uuid="a8b48502-a018-4ab3-a478-233c6d0deb18">
 			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
 				<subreportParameter name="REPORT_CONNECTION">
-					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION} ]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="chapter">
-					<subreportParameterExpression><![CDATA[$V{chapter} +1]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="covertTitle">
-					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$V{chapter} +1 ]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="customer">
 					<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="covertTitle">
+					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="section">
+					<subreportParameterExpression><![CDATA[$V{section}]]></subreportParameterExpression>
+				</subreportParameter>
 				<subreportParameter name="selectedDate">
 					<subreportParameterExpression><![CDATA[$V{selectedDate}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="section">
-					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
-				</subreportParameter>
 				<subreportParameter name="subsection">
-					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$V{subsection}]]></subreportParameterExpression>
 				</subreportParameter>
+				<returnValue subreportVariable="newChapter" toVariable="chapter"/>
+				<returnValue subreportVariable="newSection" toVariable="section"/>
+				<returnValue subreportVariable="newSubsection" toVariable="subsection"/>
 				<subreportExpression><![CDATA["MSR-6-Unix-Users.jasper"]]></subreportExpression>
 			</p:subreportPart>
 		</part>
-		<part uuid="7ec75a29-afda-4fcd-8444-50752edd54de">
+		<part uuid="c25c71c0-99e7-4ae5-8c08-9f12e9c483da">
 			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
 				<subreportParameter name="REPORT_CONNECTION">
-					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION} ]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="chapter">
 					<subreportParameterExpression><![CDATA[$V{chapter} + 1]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="customer">
-					<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
-				</subreportParameter>
 				<subreportParameter name="covertTitle">
 					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="section">
-					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
+				<subreportParameter name="customer">
+					<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
 				</subreportParameter>
-				<subreportParameter name="subsection">
-					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
+				<subreportParameter name="section">
+					<subreportParameterExpression><![CDATA[$V{section}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="selectedDate">
 					<subreportParameterExpression><![CDATA[$V{selectedDate}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="subsection">
+					<subreportParameterExpression><![CDATA[$V{subsection}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportExpression><![CDATA["MSR-7-Windows-Users.jasper"]]></subreportExpression>
 			</p:subreportPart>
