--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -30,6 +30,10 @@
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
+			<style backcolor="#EBF6FD"/>
+		</conditionalStyle>
 	</style>
 	<subDataset name="EmployeeByType" uuid="727dbfe7-4e1f-4d9e-aa0f-0a7cd6e9b2c2">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -164,7 +168,7 @@ FROM msr.avq_users as a
               FROM msr.avq_users US2
 	          WHERE US2.export_date = US1.export_date
 	          AND US2.customer = US1.customer
-		      AND US2.win_user NOT IN (SELECT US3.win_user
+		      AND US2.user_name NOT IN (SELECT US3.user_name
 	                                         FROM msr.avq_users US3 
 				        					  WHERE	US3.export_date = US1.export_date - interval '1 month'
 	                                          AND US3.customer = US1.customer)) AS USERS_ADDED,
@@ -172,7 +176,7 @@ FROM msr.avq_users as a
         	           FROM msr.avq_users US2
 	               WHERE US2.export_date = US1.export_date - interval '1 month'
 	                    AND US2.customer = US1.customer
-	                	AND US2.win_user NOT IN (SELECT US3.win_user 
+	                	AND US2.user_name NOT IN (SELECT US3.user_name
 	                		                      FROM msr.avq_users US3 
 												  WHERE	US3.export_date = US1.export_date
 	                		                      AND US3.customer = US1.customer)) AS USERS_REMOVED
