--- a/MSR/MSR-3-Critical-Sensitive.jrxml
+++ b/MSR/MSR-3-Critical-Sensitive.jrxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Critical and Sensitive Assets" pageWidth="595" pageHeight="842" columnWidth="483" leftMargin="56" rightMargin="56" topMargin="56" bottomMargin="56" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="b68e4251-4e98-4ffa-99cc-646e75dcfaf5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Critical and Sensitive Assets" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="730" leftMargin="56" rightMargin="56" topMargin="56" bottomMargin="56" isSummaryWithPageHeaderAndFooter="true" isFloatColumnFooter="true" uuid="b68e4251-4e98-4ffa-99cc-646e75dcfaf5">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper MSR"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
 	<style name="Table_TH" mode="Opaque" backcolor="#004893">
 		<box>
@@ -30,6 +39,10 @@
 			<bottomPen lineWidth="0.5" lineColor="#000000"/>
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
+			<style backcolor="#EBF6FD"/>
+		</conditionalStyle>
 	</style>
 	<subDataset name="AssetsList" uuid="8827d54c-80d4-46b0-8623-9402f77c422e">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -114,10 +127,10 @@
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="32" width="483" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
+				<reportElement x="0" y="32" width="730" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="283" y="1" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
+				<reportElement style="headerPageNumbers" x="530" y="0" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
@@ -127,9 +140,9 @@
 		<band height="55" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<frame>
-				<reportElement positionType="Float" x="0" y="0" width="483" height="50" uuid="f9d4fc46-adc0-4ad1-9b2a-acd97a57a8fe"/>
+				<reportElement positionType="Float" x="0" y="0" width="730" height="40" uuid="f9d4fc46-adc0-4ad1-9b2a-acd97a57a8fe"/>
 				<textField bookmarkLevel="1">
-					<reportElement style="Header-3" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="483" height="20" uuid="65be17bb-0e98-46bb-ac98-5b1715efeb73"/>
+					<reportElement style="Header-3" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="730" height="20" uuid="65be17bb-0e98-46bb-ac98-5b1715efeb73"/>
 					<textElement>
 						<font fontName="Arial" size="14"/>
 					</textElement>
@@ -137,7 +150,7 @@
 					<anchorNameExpression><![CDATA[$V{x.CriticalAndSensitiveAccesses}]]></anchorNameExpression>
 				</textField>
 				<staticText>
-					<reportElement style="NormalText" positionType="Float" x="0" y="20" width="483" height="30" isPrintWhenDetailOverflows="true" uuid="d3e32e70-ca08-4e3e-aae1-c7a5fd631c12"/>
+					<reportElement style="NormalText" positionType="Float" x="0" y="20" width="730" height="20" isPrintWhenDetailOverflows="true" uuid="d3e32e70-ca08-4e3e-aae1-c7a5fd631c12"/>
 					<textElement>
 						<font fontName="Arial" size="11"/>
 					</textElement>
@@ -145,10 +158,10 @@
 				</staticText>
 			</frame>
 		</band>
-		<band height="214">
+		<band height="68">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<componentElement>
-				<reportElement x="0" y="14" width="483" height="40" uuid="73870539-7c01-46dd-ae8b-41400fd52c8c">
+				<reportElement x="60" y="0" width="610" height="40" uuid="73870539-7c01-46dd-ae8b-41400fd52c8c">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -156,60 +169,60 @@
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
 					<datasetRun subDataset="AssetsList" uuid="d4e0bf14-bc34-4ab4-92f2-8626918ce1d2">
-						<connectionExpression><![CDATA[$P{REPORT_CONNECTION} ]]></connectionExpression>
+						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="120" uuid="fede1227-ff8b-4670-943d-14c0351634cd">
+					<jr:column width="140" uuid="fede1227-ff8b-4670-943d-14c0351634cd">
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="120" height="20" uuid="ddc27604-73a8-494f-9e2b-b856c540bc2a"/>
-								<text><![CDATA[service]]></text>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="140" height="20" uuid="ddc27604-73a8-494f-9e2b-b856c540bc2a"/>
+								<text><![CDATA[Service]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="120" height="20" uuid="939cb514-51a0-4558-9b3a-614d535483c2"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="140" height="20" uuid="939cb514-51a0-4558-9b3a-614d535483c2"/>
 								<textFieldExpression><![CDATA[$F{service}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="180" uuid="d803dfa4-0973-457f-b713-8e310fe77b36">
+					<jr:column width="200" uuid="d803dfa4-0973-457f-b713-8e310fe77b36">
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="180" height="20" uuid="3e7f9ace-be5a-478f-90df-be2ab1388345"/>
-								<text><![CDATA[hostname]]></text>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="200" height="20" uuid="3e7f9ace-be5a-478f-90df-be2ab1388345"/>
+								<text><![CDATA[Hostname]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="180" height="20" uuid="3838c0cc-98f5-4a09-bb8f-9ee165f1d000"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="200" height="20" uuid="3838c0cc-98f5-4a09-bb8f-9ee165f1d000"/>
 								<textFieldExpression><![CDATA[$F{hostname}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="50" uuid="bf34df02-2f78-42e3-8998-3ab6ee598710">
+					<jr:column width="90" uuid="bf34df02-2f78-42e3-8998-3ab6ee598710">
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="50" height="20" uuid="9aa558dc-58f4-4877-a2a5-80d8bcc64a4c"/>
-								<text><![CDATA[confidentiality]]></text>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="90" height="20" uuid="9aa558dc-58f4-4877-a2a5-80d8bcc64a4c"/>
+								<text><![CDATA[Confidentiality]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="50" height="20" uuid="61e6985f-8d47-4be9-8780-0808a596055c"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="90" height="20" uuid="61e6985f-8d47-4be9-8780-0808a596055c"/>
 								<textFieldExpression><![CDATA[$F{confidentiality}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="133" uuid="eb71e56e-dce7-4eb2-8c75-a9048b38ffe2">
+					<jr:column width="180" uuid="eb71e56e-dce7-4eb2-8c75-a9048b38ffe2">
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table-Column-Header" x="0" y="0" width="133" height="20" uuid="79fc7f48-f3a1-41a6-9163-ef80aec938bb"/>
-								<text><![CDATA[server_room]]></text>
+								<reportElement style="Table-Column-Header" x="0" y="0" width="180" height="20" uuid="79fc7f48-f3a1-41a6-9163-ef80aec938bb"/>
+								<text><![CDATA[Physical location (server room)]]></text>
 							</staticText>
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<textField>
-								<reportElement style="Table-Detail-line" x="0" y="0" width="133" height="20" uuid="06beddcc-2b61-4206-8d6d-b32b7e80990a"/>
+								<reportElement style="Table-Detail-line" x="0" y="0" width="180" height="20" uuid="06beddcc-2b61-4206-8d6d-b32b7e80990a"/>
 								<textFieldExpression><![CDATA[$F{server_room}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
@@ -225,7 +238,7 @@
 				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="413" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
+				<reportElement x="660" y="0" width="70" height="51" uuid="0e9cfb83-cd7f-448d-b90d-98ed7c55829a"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
